# youtube-demo-mcp-server

./: .env.example  .gitignore  config.py  mcp_server.py  pyproject.toml  requirements.txt  youtube-demo.ipynb
models/: youtube_models.py
server/: main.py
services/: youtube_service.py
tools/: market_analysis_tool.py  system_status_tool.py  video_search_tool.py
